<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_documento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_documento" />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_usuario" />

    <EditText
        android:id="@+id/et_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_nombres" />

    <EditText
        android:id="@+id/et_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_apellidos" />

    <EditText
        android:id="@+id/et_CONTRA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_contra" />

    <Button
        android:id="@+id/bt_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_registar"
        android:onClick="accionRegistrar" />

    <!-- EditText y Button para buscar -->
    <EditText
        android:id="@+id/et_buscar_documento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingrese el número de documento" />

    <Button
        android:id="@+id/bt_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Buscar"
        android:onClick="accionBuscar" />

    <!-- ListView para mostrar resultados de búsqueda -->
    <ListView
        android:id="@+id/LV_lista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

</LinearLayout>
